force-app/main/default/objects/LINE_Error_Log__c/LINE_Error_Log__c.object-meta.xml
<CustomObject>
    <description
  >Processing errors from LINE Connect (webhook processing, callouts, batches). Written by LineLogger; kept 90 days. Never contains secrets or tokens.</description>
    <label>LINE Error Log</label>
    <nameField>
        <displayFormat>LEL-{0000000}</displayFormat>
        <label>Log Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>LINE Error Logs</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>