force-app/main/default/objects/LINE_Error_Log__c/fields/LINE_OA_Configuration__c.field-meta.xml
<CustomField>
    <fullName>LINE_OA_Configuration__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The LINE OA involved, if any.</description>
    <label>LINE OA Configuration</label>
    <referenceTo>LINE_OA_Configuration__c</referenceTo>
    <relationshipLabel>LINE Error Logs</relationshipLabel>
    <relationshipName>LINE_Error_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>