force-app/main/default/objects/LINE_Error_Log__c/fields/Message__c.field-meta.xml
<CustomField>
    <fullName>Message__c</fullName>
    <description>Error message.</description>
    <label>Message</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>