force-app/main/default/objects/LINE_Error_Log__c/fields/Related_Record_Id__c.field-meta.xml
<CustomField>
    <fullName>Related_Record_Id__c</fullName>
    <description
  >ID of the record involved (conversation, message, Contact or Event).</description>
    <label>Related Record ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>