force-app/main/default/objects/LINE_Error_Log__c/fields/Source__c.field-meta.xml
<CustomField>
    <fullName>Source__c</fullName>
    <description>Class and method that logged the error.</description>
    <label>Source</label>
    <length>100</length>
    <type>Text</type>
</CustomField>