force-app/main/default/objects/LINE_Error_Log__c/fields/Stack_Trace__c.field-meta.xml
<CustomField>
    <fullName>Stack_Trace__c</fullName>
    <description>Apex stack trace, if any.</description>
    <label>Stack Trace</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>